implemented serving an HTML file with a form in response to a GET request

--- a/views/products.html
+++ b/views/products.html
@@ -6,7 +6,11 @@
     <title>products</title>
 </head>
 <body>
-    <h1>Fetching All Products</h1>
+    <form>
+        <label for="product">Product Name: </label>
+        <input id="product" name="productName" type="text">
+        <button type="submit">Add Product</button>
+    </form>
 </body>
 
     </html>
