implementing post request by html file and post data to the server

--- a/views/products.html
+++ b/views/products.html
@@ -6,11 +6,13 @@
     <title>products</title>
 </head>
 <body>
-    <form>
+    <form onsubmit="submitHandler(event)">
         <label for="product">Product Name: </label>
         <input id="product" name="productName" type="text">
         <button type="submit">Add Product</button>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/product.js"></script>
 </body>
 
     </html>
